tests/tc/neg/obj02.js
/*@ foo :: () => boolean  */
function foo() {
  return 1;
}

